# ml-project-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: config.yaml  logging_config.yaml
src/: __init__.py
src/data/: dataset.py
src/features/: build_features.py
src/models/: predict.py  train.py
src/utils/: helpers.py
src/visualization/: __init__.py  visualize.py
tests/: __init__.py  test_data.py  test_features.py  test_models.py
